--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   auto_route: ^8.3.0
   collection: ^1.18.0
   cupertino_icons: ^1.0.6
-  dart_appwrite: 12.0.0-rc.1
+  dart_appwrite: 12.1.0
   encrypt: ^5.0.3
   equatable: ^2.0.5
   file_picker: ^8.0.6
